# text-rpg

./: .gitignore  README.md  config.yaml  main.py  pip_install.sh  requirements.txt  text-rpg.spec  todos.py
engine/: example.config.json  example.config.toml  pyproject.toml  pytest.ini  requirements.txt
engine/examples/: input.py  input_driver_default_auto.py  multi_processing.py
engine/schemas/: engine_config_schema.json
engine/scripts/: generate_config_schema.py
engine/src/engine/: __init__.py
engine/src/engine/api/: __init__.py  dataclasses.py  events.py  factory.py  input.py  models.py  system.py
engine/src/engine/common/: dataclasses.py  enums.py  event_bus.py
engine/src/engine/config/: __init__.py  loader.py  models.py
engine/src/engine/core/: __init__.py  app_context.py  bus.py  clock.py  context.py  dataclasses.py  domain_driver.py  (+11 more)
engine/tests/: conftest.py
engine/tests/benchmarks/: test_api_latency.py  test_bus_performance.py  test_core_performance.py  test_input_performance.py  test_memory_overhead.py
engine/tests/integration/: test_api_factory.py  test_bucket_ticks.py  test_clock_stability.py  test_ctx_singleton_behavior.py  test_developer_flow.py  test_engine_flow.py  test_engine_lifecycle.py  test_full_dev_flow.py  test_input_domain.py  test_input_pipeline.py  test_input_to_bus.py  test_lifecycle.py  test_logging_integration.py  test_manager_cleanup.py  test_shutdown_pipeline.py  test_temporal_decay.py
engine/tests/unit/: test_api_namespaces.py  test_blessed_driver.py  test_event_bus.py  test_input_manager.py  test_log_manager.py
(+109 files in other folders)
